...
                    app:dateFormat="@{album.releaseDate}"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    tools:text="1970/11/04" />

                <TextView
                    android:id="@+id/tracks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/recordLabel"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabel"
...
                    android:layout_marginTop="8dp"
                    android:textAlignment="textEnd"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenre"
                    app:performersFromList="@{album.performers}"
                    tools:text="Rubén Blades Bellido de Luna" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
...
